@@ -2,567 +2,437 @@ package GUI;
 
 import BUS.HuongDanVienBUS;
 import DTO.HuongDanVienDTO;
-import DAL.HuongDanVienDAL;
 import Exception.BusException;
-import java.awt.Color;
-import java.awt.Component;
-import java.awt.Dimension;
-import java.awt.Font;
-import javax.swing.BorderFactory;
-import static javax.swing.SwingConstants.CENTER;
-import javax.swing.table.DefaultTableCellRenderer;
-import javax.swing.table.JTableHeader;
-import java.sql.Connection;
-import java.sql.DriverManager;
-import java.sql.Statement;
-import java.sql.ResultSet;
-import javax.swing.RowFilter;
-import javax.swing.table.TableRowSorter;
-import javax.swing.table.DefaultTableModel;
-import java.util.ArrayList;
-import javax.swing.JOptionPane;
+import GUI.Menu.ActionButton;
+import GUI.Menu.PaintComponent;
+import GUI.Menu.TabbedPaneCustom;
+import GUI.ScrollPane.ScrollPaneWin11;
 
-public class HuongDanVienPanel extends javax.swing.JPanel {
-    HuongDanVienBUS bus = new HuongDanVienBUS();
+import javax.swing.*;
+import javax.swing.border.EmptyBorder;
+import javax.swing.border.MatteBorder;
+import javax.swing.table.DefaultTableCellRenderer;
+import javax.swing.table.DefaultTableModel;
+import javax.swing.table.JTableHeader;
+import java.awt.*;
+import java.awt.event.KeyAdapter;
+import java.awt.event.KeyEvent;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
+import java.util.ArrayList;
+
+public class HuongDanVienPanel extends JPanel {
+
+    private static final Color MAU_CHINH = new Color(41, 128, 185);
+    private static final Color MAU_NEN = new Color(246, 247, 248);
+    private static final Color MAU_TRANG = Color.WHITE;
+    private static final Color MAU_HANG_XEN = new Color(240, 246, 252);
+    private static final Color MAU_CHON = new Color(214, 234, 248);
+    private static final Color MAU_CHU_TOI = new Color(44, 62, 80);
+    private static final Color MAU_CHU_PHU = new Color(127, 140, 141);
+    private static final Color MAU_VIEN = new Color(213, 219, 219);
+    private static final String FONT = "Segoe UI";
+
+    private final HuongDanVienBUS bus;
+    private HuongDanVienDTO hdvDangChon = null;
+
+    private JTextField txtTimKiem;
+    private ActionButton btnTimKiem;
+    private JLabel lblTongSo;
+
+    private JTable bangDuLieu;
+    private DefaultTableModel modelBang;
+
+    private JTextField txtMaHDV;
+    private JTextField txtTenHDV;
+    private JComboBox<String> cboGioiTinh;
+    private JTextField txtNamSinh;
+    private JTextField txtChuyenMon;
+    private JTextField txtSoDienThoai;
+
+    private ActionButton btnThemMoi;
+    private ActionButton btnCapNhat;
+    private ActionButton btnXoa;
+    private ActionButton btnLamMoi;
+
     public HuongDanVienPanel() {
-        initComponents();
-        customTableHeader();
-        loadData ();
+        this.bus = new HuongDanVienBUS();
+        xayDungGiaoDien();
+        taiDuLieu(null);
+        resetFormThemMoi();
     }
-    private void customTableHeader(){
-        JTableHeader header = tbHDV.getTableHeader();
-        header.setDefaultRenderer(new DefaultTableCellRenderer() {
+
+    private void xayDungGiaoDien() {
+        setBackground(MAU_NEN);
+        setLayout(new BorderLayout());
+        TabbedPaneCustom tabs = new TabbedPaneCustom();
+        tabs.setFont(new Font(FONT, Font.BOLD, 13));
+        tabs.setSelectedColor(MAU_CHINH);
+        JPanel panelTab = new JPanel(new BorderLayout(0, 8));
+        panelTab.setBackground(MAU_NEN);
+        panelTab.setBorder(new EmptyBorder(10, 12, 10, 12));
+        panelTab.add(xayDungThanhTimKiem(), BorderLayout.NORTH);
+        panelTab.add(xayDungVungChinh(), BorderLayout.CENTER);
+        tabs.addTab("Hướng dẫn viên", panelTab);
+        add(tabs, BorderLayout.CENTER);
+    }
+
+    private JPanel xayDungThanhTimKiem() {
+        JPanel panel = new JPanel(new BorderLayout(8, 0));
+        panel.setBackground(MAU_NEN);
+        panel.setBorder(new EmptyBorder(0, 0, 4, 0));
+        JPanel panelTrai = new JPanel(new FlowLayout(FlowLayout.LEFT, 6, 0));
+        panelTrai.setBackground(MAU_NEN);
+        JLabel lblTieuDe = new JLabel("Quản lý Hướng dẫn viên");
+        lblTieuDe.setFont(new Font(FONT, Font.BOLD, 18));
+        lblTieuDe.setForeground(MAU_CHU_TOI);
+        txtTimKiem = new JTextField(22);
+        txtTimKiem.setFont(new Font(FONT, Font.PLAIN, 13));
+        txtTimKiem.setPreferredSize(new Dimension(220, 32));
+        txtTimKiem.setBorder(BorderFactory.createCompoundBorder(
+                BorderFactory.createLineBorder(MAU_VIEN, 1), new EmptyBorder(2, 8, 2, 8)));
+        txtTimKiem.addKeyListener(new KeyAdapter() {
             @Override
-            public Component getTableCellRendererComponent(
-                    javax.swing.JTable t, Object value, boolean isSelected,
-                    boolean hasFocus, int row, int column) {
-                super.getTableCellRendererComponent(t, value, isSelected, hasFocus, row, column);
-                setBackground(new Color(41, 128, 185));
-                setForeground(Color.WHITE);
-                setFont(new Font("Segoe UI", Font.BOLD, 16));
-                setHorizontalAlignment(CENTER);
-                setBorder(BorderFactory.createMatteBorder(0, 0, 0, 1, new Color(255, 255, 255, 60)));
+            public void keyPressed(KeyEvent e) {
+                if (e.getKeyCode() == KeyEvent.VK_ENTER) taiDuLieu(txtTimKiem.getText());
+            }
+        });
+        btnTimKiem = new ActionButton();
+        btnTimKiem.setText("🔍  Tìm kiếm");
+        btnTimKiem.setPreferredSize(new Dimension(120, 32));
+        btnTimKiem.addActionListener(e -> taiDuLieu(txtTimKiem.getText()));
+        panelTrai.add(lblTieuDe);
+        panelTrai.add(Box.createHorizontalStrut(12));
+        panelTrai.add(txtTimKiem);
+        panelTrai.add(btnTimKiem);
+        lblTongSo = new JLabel("Tổng: 0 bản ghi");
+        lblTongSo.setFont(new Font(FONT, Font.ITALIC, 12));
+        lblTongSo.setForeground(MAU_CHU_PHU);
+        lblTongSo.setBorder(new EmptyBorder(0, 0, 0, 4));
+        panel.add(panelTrai, BorderLayout.WEST);
+        panel.add(lblTongSo, BorderLayout.EAST);
+        return panel;
+    }
+
+    private JPanel xayDungVungChinh() {
+        JPanel panel = new JPanel(new BorderLayout(10, 0));
+        panel.setBackground(MAU_NEN);
+        panel.add(xayDungBang(), BorderLayout.CENTER);
+        panel.add(xayDungFormNhap(), BorderLayout.EAST);
+        return panel;
+    }
+
+    private ScrollPaneWin11 xayDungBang() {
+        modelBang = new DefaultTableModel(
+                new String[]{"STT", "Mã HDV", "Tên HDV", "Giới tính", "Năm sinh",
+                        "Chuyên môn", "Số ĐT"}, 0) {
+            @Override
+            public boolean isCellEditable(int r, int c) { return false; }
+        };
+        bangDuLieu = new JTable(modelBang);
+        bangDuLieu.setFont(new Font(FONT, Font.PLAIN, 13));
+        bangDuLieu.setRowHeight(36);
+        bangDuLieu.setShowGrid(false);
+        bangDuLieu.setIntercellSpacing(new Dimension(0, 0));
+        bangDuLieu.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
+        bangDuLieu.setSelectionBackground(MAU_CHON);
+        bangDuLieu.setSelectionForeground(MAU_CHU_TOI);
+        bangDuLieu.setFillsViewportHeight(true);
+        bangDuLieu.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
+        bangDuLieu.getColumnModel().getColumn(0).setMaxWidth(50);
+        bangDuLieu.getColumnModel().getColumn(1).setPreferredWidth(80);
+        bangDuLieu.getColumnModel().getColumn(2).setPreferredWidth(180);
+        bangDuLieu.getColumnModel().getColumn(3).setPreferredWidth(80);
+        bangDuLieu.getColumnModel().getColumn(4).setPreferredWidth(80);
+        bangDuLieu.getColumnModel().getColumn(5).setPreferredWidth(180);
+        bangDuLieu.getColumnModel().getColumn(6).setPreferredWidth(120);
+        bangDuLieu.setDefaultRenderer(Object.class, new DefaultTableCellRenderer() {
+            @Override
+            public Component getTableCellRendererComponent(JTable t, Object v, boolean sel,
+                    boolean foc, int row, int col) {
+                super.getTableCellRendererComponent(t, v, sel, foc, row, col);
                 setOpaque(true);
+                setFont(new Font(FONT, Font.PLAIN, 13));
+                setForeground(MAU_CHU_TOI);
+                setBorder(new EmptyBorder(0, 8, 0, 8));
+                if (!sel) setBackground(row % 2 == 0 ? MAU_TRANG : MAU_HANG_XEN);
+                setHorizontalAlignment(col == 0 || col == 4 ? CENTER : LEFT);
                 return this;
             }
         });
-        header.setPreferredSize(new Dimension(header.getWidth(), 40));
-        header.setReorderingAllowed(false);
-    }
-    public void loadData() {
-    DefaultTableModel model = (DefaultTableModel) tbHDV.getModel();
-    model.setRowCount(0);
-    try {
-        ArrayList<HuongDanVienDTO> list = bus.getAllHDV(); 
-        for (HuongDanVienDTO hdv : list) {
-            model.addRow(new Object[]{
-                hdv.getMaHDV(),
-                hdv.getTenHDV(),
-                hdv.getGioiTinh(),
-                hdv.getNamSinh(),
-                hdv.getChuyenMon(),
-                hdv.getSoDienThoai()
-            });
-        }
-    } catch (BusException e) {
-        e.printStackTrace();
-        JOptionPane.showMessageDialog(this, "Lỗi khi tải danh sách hướng dẫn viên.");
-    }
-}
-    @SuppressWarnings("unchecked")
-    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
-    private void initComponents() {
-
-        jPanel1 = new javax.swing.JPanel();
-        jScrollPane3 = new javax.swing.JScrollPane();
-        tbHDV = new javax.swing.JTable();
-        them = new GUI.Menu.ActionButton();
-        xoa = new GUI.Menu.ActionButton();
-        sua = new GUI.Menu.ActionButton();
-        jPanel2 = new javax.swing.JPanel();
-        jLabel1 = new javax.swing.JLabel();
-        jLabel8 = new javax.swing.JLabel();
-        jPanel3 = new javax.swing.JPanel();
-        jLabel2 = new javax.swing.JLabel();
-        maHDV = new GUI.LoginForm.CustomTextField();
-        jLabel3 = new javax.swing.JLabel();
-        tenHDV = new GUI.LoginForm.CustomTextField();
-        jLabel4 = new javax.swing.JLabel();
-        gioiTinh = new GUI.LoginForm.CustomTextField();
-        jLabel5 = new javax.swing.JLabel();
-        namSinh = new GUI.LoginForm.CustomTextField();
-        jLabel6 = new javax.swing.JLabel();
-        chuyenMon = new GUI.LoginForm.CustomTextField();
-        jLabel7 = new javax.swing.JLabel();
-        soDienThoai = new GUI.LoginForm.CustomTextField();
-        timkiem = new GUI.Menu.ActionButton();
-        lammoi = new GUI.Menu.ActionButton();
-        jPanel4 = new javax.swing.JPanel();
-        jLabel9 = new javax.swing.JLabel();
-        jLabel10 = new javax.swing.JLabel();
-        jLabel11 = new javax.swing.JLabel();
-        maHDV1 = new GUI.LoginForm.CustomTextField();
-        tenHDV1 = new GUI.LoginForm.CustomTextField();
-        gioiTinh1 = new GUI.LoginForm.CustomTextField();
-        jLabel12 = new javax.swing.JLabel();
-        jLabel13 = new javax.swing.JLabel();
-        jLabel14 = new javax.swing.JLabel();
-        namSinh1 = new GUI.LoginForm.CustomTextField();
-        chuyenMon1 = new GUI.LoginForm.CustomTextField();
-        soDienThoai1 = new GUI.LoginForm.CustomTextField();
-
-        setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());
-
-        jPanel1.setBackground(new java.awt.Color(255, 255, 255));
-
-        tbHDV.setFont(new java.awt.Font("Segoe UI", 0, 18)); // NOI18N
-        tbHDV.setModel(new javax.swing.table.DefaultTableModel(
-            new Object [][] {
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null},
-                {null, null, null, null, null, null}
-            },
-            new String [] {
-                "Mã hướng dẫn viên", "Tên hướng dẫn viên", "Giới tính ", "Năm sinh", "Chuyên môn", "Số điện thoại"
-            }
-        ) {
-            Class[] types = new Class [] {
-                java.lang.String.class, java.lang.String.class, java.lang.String.class, java.lang.Integer.class, java.lang.String.class, java.lang.String.class
-            };
-
-            public Class getColumnClass(int columnIndex) {
-                return types [columnIndex];
+        JTableHeader header = bangDuLieu.getTableHeader();
+        header.setPreferredSize(new Dimension(header.getWidth(), 42));
+        header.setFont(new Font(FONT, Font.BOLD, 13));
+        header.setBorder(BorderFactory.createEmptyBorder());
+        header.setDefaultRenderer(new DefaultTableCellRenderer() {
+            @Override
+            public Component getTableCellRendererComponent(JTable table, Object value,
+                    boolean isSelected, boolean hasFocus, int row, int column) {
+                JLabel label = new JLabel(value != null ? value.toString() : "") {
+                    @Override
+                    protected void paintComponent(Graphics g) {
+                        Graphics2D g2 = (Graphics2D) g;
+                        g2.setPaint(new GradientPaint(0, 0, MAU_CHINH, 0, getHeight(), MAU_CHINH.darker()));
+                        g2.fillRect(0, 0, getWidth(), getHeight());
+                        super.paintComponent(g);
+                    }
+                };
+                label.setFont(new Font(FONT, Font.BOLD, 13));
+                label.setHorizontalAlignment(column == 0 ? JLabel.CENTER : JLabel.LEFT);
+                label.setForeground(Color.WHITE);
+                label.setOpaque(false);
+                label.setBorder(new EmptyBorder(0, 8, 0, 8));
+                return label;
             }
         });
-        tbHDV.setColumnSelectionAllowed(true);
-        tbHDV.setEditingColumn(1);
-        tbHDV.setEditingRow(1);
-        tbHDV.setRowHeight(50);
-        jScrollPane3.setViewportView(tbHDV);
-        tbHDV.getColumnModel().getSelectionModel().setSelectionMode(javax.swing.ListSelectionModel.SINGLE_INTERVAL_SELECTION);
-
-        them.setIcon(new javax.swing.ImageIcon(getClass().getResource("/image/icon/plus.png"))); // NOI18N
-        them.setMnemonic('T');
-        them.setText("Thêm");
-        them.setToolTipText("");
-        them.setColorTop(new java.awt.Color(102, 204, 255));
-        them.addActionListener(this::themActionPerformed);
-
-        xoa.setIcon(new javax.swing.ImageIcon(getClass().getResource("/image/icon/delete.png"))); // NOI18N
-        xoa.setMnemonic('X');
-        xoa.setText("Xóa");
-        xoa.setToolTipText("");
-        xoa.setColorBottom(new java.awt.Color(153, 0, 0));
-        xoa.setColorTop(new java.awt.Color(255, 51, 51));
-        xoa.addActionListener(this::xoaActionPerformed);
-
-        sua.setIcon(new javax.swing.ImageIcon(getClass().getResource("/image/icon/pencil.png"))); // NOI18N
-        sua.setMnemonic('S');
-        sua.setText("Sửa");
-        sua.setColorTop(new java.awt.Color(102, 204, 255));
-        sua.addActionListener(this::suaActionPerformed);
-
-        javax.swing.GroupLayout jPanel1Layout = new javax.swing.GroupLayout(jPanel1);
-        jPanel1.setLayout(jPanel1Layout);
-        jPanel1Layout.setHorizontalGroup(
-            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel1Layout.createSequentialGroup()
-                .addGap(83, 83, 83)
-                .addComponent(them, javax.swing.GroupLayout.PREFERRED_SIZE, 199, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(107, 107, 107)
-                .addComponent(sua, javax.swing.GroupLayout.PREFERRED_SIZE, 198, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 110, Short.MAX_VALUE)
-                .addComponent(xoa, javax.swing.GroupLayout.PREFERRED_SIZE, 200, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(83, 83, 83))
-            .addGroup(jPanel1Layout.createSequentialGroup()
-                .addComponent(jScrollPane3, javax.swing.GroupLayout.PREFERRED_SIZE, 925, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(0, 0, Short.MAX_VALUE))
-        );
-        jPanel1Layout.setVerticalGroup(
-            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel1Layout.createSequentialGroup()
-                .addComponent(jScrollPane3, javax.swing.GroupLayout.PREFERRED_SIZE, 410, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(65, 65, 65)
-                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
-                    .addComponent(them, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addComponent(sua, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addComponent(xoa, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                .addContainerGap(140, Short.MAX_VALUE))
-        );
-
-        add(jPanel1, new org.netbeans.lib.awtextra.AbsoluteConstraints(340, 220, 980, 655));
-
-        jPanel2.setBackground(new java.awt.Color(255, 255, 255));
-
-        jLabel1.setFont(new java.awt.Font("Segoe UI", 1, 36)); // NOI18N
-        jLabel1.setText("Danh sách");
-
-        jLabel8.setFont(new java.awt.Font("Segoe UI", 1, 36)); // NOI18N
-        jLabel8.setText("hướng dẫn viên");
-
-        javax.swing.GroupLayout jPanel2Layout = new javax.swing.GroupLayout(jPanel2);
-        jPanel2.setLayout(jPanel2Layout);
-        jPanel2Layout.setHorizontalGroup(
-            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel2Layout.createSequentialGroup()
-                .addContainerGap()
-                .addComponent(jLabel1)
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel2Layout.createSequentialGroup()
-                .addContainerGap(63, Short.MAX_VALUE)
-                .addComponent(jLabel8)
-                .addContainerGap())
-        );
-        jPanel2Layout.setVerticalGroup(
-            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel2Layout.createSequentialGroup()
-                .addComponent(jLabel1)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jLabel8)
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-        );
-
-        add(jPanel2, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 0, -1, 110));
-
-        jPanel3.setBackground(new java.awt.Color(255, 255, 255));
-
-        jLabel2.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel2.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
-        jLabel2.setText("Mã hướng dẫn viên");
-
-        maHDV.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        jLabel3.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel3.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
-        jLabel3.setText("Tên hướng dẫn viên");
-
-        tenHDV.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        jLabel4.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel4.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
-        jLabel4.setText("Giới tính");
-
-        gioiTinh.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        jLabel5.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel5.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
-        jLabel5.setText("Năm sinh");
-
-        namSinh.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        jLabel6.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel6.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
-        jLabel6.setText("Chuyên môn");
-
-        chuyenMon.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        jLabel7.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel7.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
-        jLabel7.setText("Số điện thoại ");
-
-        soDienThoai.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        timkiem.setIcon(new javax.swing.ImageIcon(getClass().getResource("/image/icon/search2.png"))); // NOI18N
-        timkiem.setText("Tìm kiếm");
-        timkiem.setColorTop(new java.awt.Color(102, 204, 255));
-        timkiem.addActionListener(this::timkiemActionPerformed);
-
-        lammoi.setIcon(new javax.swing.ImageIcon(getClass().getResource("/image/icon/reload2.png"))); // NOI18N
-        lammoi.setText("Làm mới");
-        lammoi.setColorBottom(new java.awt.Color(153, 153, 153));
-        lammoi.setColorTop(new java.awt.Color(204, 204, 204));
-        lammoi.addActionListener(this::lammoiActionPerformed);
-
-        javax.swing.GroupLayout jPanel3Layout = new javax.swing.GroupLayout(jPanel3);
-        jPanel3.setLayout(jPanel3Layout);
-        jPanel3Layout.setHorizontalGroup(
-            jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel3Layout.createSequentialGroup()
-                .addGap(45, 45, 45)
-                .addGroup(jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
-                    .addComponent(jLabel7, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                    .addGroup(jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                        .addComponent(lammoi, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, 250, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addComponent(maHDV, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addComponent(tenHDV, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addComponent(gioiTinh, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addComponent(namSinh, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addComponent(chuyenMon, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addComponent(soDienThoai, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                        .addComponent(timkiem, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, 250, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addComponent(jLabel2)
-                        .addComponent(jLabel3, javax.swing.GroupLayout.Alignment.TRAILING)
-                        .addComponent(jLabel4, javax.swing.GroupLayout.Alignment.TRAILING)
-                        .addComponent(jLabel5, javax.swing.GroupLayout.Alignment.TRAILING)
-                        .addComponent(jLabel6, javax.swing.GroupLayout.Alignment.TRAILING)))
-                .addContainerGap(45, Short.MAX_VALUE))
-        );
-
-        jPanel3Layout.linkSize(javax.swing.SwingConstants.HORIZONTAL, new java.awt.Component[] {chuyenMon, gioiTinh, jLabel2, jLabel3, jLabel4, jLabel5, jLabel6, jLabel7, maHDV, namSinh, soDienThoai, tenHDV});
-
-        jPanel3Layout.setVerticalGroup(
-            jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel3Layout.createSequentialGroup()
-                .addContainerGap()
-                .addComponent(jLabel2)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(maHDV, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jLabel3)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(tenHDV, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jLabel4)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(gioiTinh, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jLabel5)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(namSinh, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jLabel6)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(chuyenMon, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jLabel7)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(soDienThoai, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(34, 34, 34)
-                .addComponent(timkiem, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(18, 18, 18)
-                .addComponent(lammoi, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addContainerGap(141, Short.MAX_VALUE))
-        );
-
-        jPanel3Layout.linkSize(javax.swing.SwingConstants.VERTICAL, new java.awt.Component[] {chuyenMon, gioiTinh, maHDV, namSinh, soDienThoai, tenHDV});
-
-        add(jPanel3, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 110, 340, -1));
-
-        jPanel4.setBackground(new java.awt.Color(255, 255, 255));
-        jPanel4.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        jLabel9.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel9.setText("Mã hướng dẫn viên");
-
-        jLabel10.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel10.setText("Tên hướng dẫn viên");
-
-        jLabel11.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel11.setText("Giới tính");
-
-        maHDV1.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        tenHDV1.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        gioiTinh1.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        jLabel12.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel12.setText("Năm sinh");
-
-        jLabel13.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel13.setText("Chuyên môn");
-
-        jLabel14.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-        jLabel14.setText("Số điện thoại");
-
-        namSinh1.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        chuyenMon1.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        soDienThoai1.setFont(new java.awt.Font("Segoe UI", 1, 18)); // NOI18N
-
-        javax.swing.GroupLayout jPanel4Layout = new javax.swing.GroupLayout(jPanel4);
-        jPanel4.setLayout(jPanel4Layout);
-        jPanel4Layout.setHorizontalGroup(
-            jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel4Layout.createSequentialGroup()
-                .addContainerGap()
-                .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addGroup(jPanel4Layout.createSequentialGroup()
-                        .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(jLabel9)
-                            .addComponent(jLabel11))
-                        .addGap(22, 22, 22))
-                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel4Layout.createSequentialGroup()
-                        .addComponent(jLabel10)
-                        .addGap(18, 18, 18)))
-                .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
-                    .addComponent(maHDV1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                    .addComponent(tenHDV1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                    .addComponent(gioiTinh1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
-                .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel4Layout.createSequentialGroup()
-                        .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(jLabel13)
-                            .addComponent(jLabel12))
-                        .addGap(24, 24, 24))
-                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel4Layout.createSequentialGroup()
-                        .addComponent(jLabel14)
-                        .addGap(18, 18, 18)))
-                .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
-                    .addComponent(namSinh1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                    .addComponent(chuyenMon1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                    .addComponent(soDienThoai1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-        );
-        jPanel4Layout.setVerticalGroup(
-            jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel4Layout.createSequentialGroup()
-                .addContainerGap(39, Short.MAX_VALUE)
-                .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addGroup(jPanel4Layout.createSequentialGroup()
-                        .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(maHDV1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                            .addComponent(jLabel9))
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                        .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(jLabel10)
-                            .addComponent(tenHDV1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                        .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(jLabel11)
-                            .addComponent(gioiTinh1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)))
-                    .addGroup(jPanel4Layout.createSequentialGroup()
-                        .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(namSinh1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                            .addComponent(jLabel12))
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                        .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(chuyenMon1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                            .addGroup(jPanel4Layout.createSequentialGroup()
-                                .addComponent(jLabel13)
-                                .addGap(26, 26, 26)
-                                .addGroup(jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                                    .addComponent(jLabel14)
-                                    .addComponent(soDienThoai1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))))))
-                .addGap(31, 31, 31))
-        );
-
-        add(jPanel4, new org.netbeans.lib.awtextra.AbsoluteConstraints(340, 0, 980, -1));
-    }// </editor-fold>//GEN-END:initComponents
-
-    private void timkiemActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_timkiemActionPerformed
-        DefaultTableModel model = (DefaultTableModel) tbHDV.getModel();
-    TableRowSorter<DefaultTableModel> sorter = new TableRowSorter<>(model);
-    tbHDV.setRowSorter(sorter);
-
-    ArrayList<RowFilter<DefaultTableModel, Integer>> filters = new ArrayList<>();
-
-    if(!maHDV.getText().trim().isEmpty()){
-        filters.add(RowFilter.regexFilter("(?i)" + maHDV.getText(), 0));
+        bangDuLieu.addMouseListener(new MouseAdapter() {
+            @Override
+            public void mouseClicked(MouseEvent e) {
+                int row = bangDuLieu.getSelectedRow();
+                if (row >= 0) dienFormTuHang(row);
+            }
+        });
+        ScrollPaneWin11 scroll = new ScrollPaneWin11();
+        scroll.setViewportView(bangDuLieu);
+        scroll.setBorder(BorderFactory.createLineBorder(MAU_VIEN, 1));
+        return scroll;
     }
 
-    if(!tenHDV.getText().trim().isEmpty()){
-        filters.add(RowFilter.regexFilter("(?i)" + tenHDV.getText(), 1));
+    private JPanel xayDungFormNhap() {
+        JPanel panelNgoai = new JPanel(new BorderLayout());
+        panelNgoai.setPreferredSize(new Dimension(310, 0));
+        panelNgoai.setBackground(MAU_TRANG);
+        panelNgoai.setBorder(BorderFactory.createLineBorder(MAU_VIEN, 1));
+        PaintComponent thanhGradient = new PaintComponent();
+        thanhGradient.setPreferredSize(new Dimension(0, 6));
+        JPanel panelNoiDung = new JPanel(new GridBagLayout());
+        panelNoiDung.setBackground(MAU_TRANG);
+        panelNoiDung.setBorder(new EmptyBorder(12, 14, 12, 14));
+        GridBagConstraints gbc = new GridBagConstraints();
+        gbc.insets = new Insets(4, 2, 4, 2);
+        gbc.fill = GridBagConstraints.HORIZONTAL;
+        gbc.weightx = 1.0;
+        int row = 0;
+
+        JLabel lblTieuDe = new JLabel("THÔNG TIN HƯỚNG DẪN VIÊN");
+        lblTieuDe.setFont(new Font(FONT, Font.BOLD, 13));
+        lblTieuDe.setForeground(MAU_CHINH);
+        lblTieuDe.setBorder(new MatteBorder(0, 0, 1, 0, MAU_VIEN));
+        gbc.gridx = 0; gbc.gridy = row++; gbc.gridwidth = 2;
+        gbc.insets = new Insets(0, 2, 10, 2);
+        panelNoiDung.add(lblTieuDe, gbc);
+        gbc.insets = new Insets(4, 2, 4, 2); gbc.gridwidth = 1;
+
+        row = addLabel(panelNoiDung, gbc, row, "Mã HDV *");
+        txtMaHDV = new JTextField();
+        txtMaHDV.setFont(new Font(FONT, Font.PLAIN, 13));
+        txtMaHDV.setEditable(false);
+        txtMaHDV.setBackground(new Color(240, 243, 247));
+        styleInput(txtMaHDV);
+        gbc.gridx = 0; gbc.gridy = row++; gbc.gridwidth = 2;
+        panelNoiDung.add(txtMaHDV, gbc); gbc.gridwidth = 1;
+
+        row = addLabel(panelNoiDung, gbc, row, "Tên hướng dẫn viên *");
+        txtTenHDV = new JTextField();
+        txtTenHDV.setFont(new Font(FONT, Font.PLAIN, 13));
+        styleInput(txtTenHDV);
+        gbc.gridx = 0; gbc.gridy = row++; gbc.gridwidth = 2;
+        panelNoiDung.add(txtTenHDV, gbc); gbc.gridwidth = 1;
+
+        row = addLabel(panelNoiDung, gbc, row, "Giới tính");
+        cboGioiTinh = new JComboBox<>(new String[]{"Nam", "Nữ", "Khác"});
+        cboGioiTinh.setFont(new Font(FONT, Font.PLAIN, 13));
+        cboGioiTinh.setPreferredSize(new Dimension(0, 32));
+        gbc.gridx = 0; gbc.gridy = row++; gbc.gridwidth = 2;
+        panelNoiDung.add(cboGioiTinh, gbc); gbc.gridwidth = 1;
+
+        row = addLabel(panelNoiDung, gbc, row, "Năm sinh *");
+        txtNamSinh = new JTextField();
+        txtNamSinh.setFont(new Font(FONT, Font.PLAIN, 13));
+        styleInput(txtNamSinh);
+        gbc.gridx = 0; gbc.gridy = row++; gbc.gridwidth = 2;
+        panelNoiDung.add(txtNamSinh, gbc); gbc.gridwidth = 1;
+
+        row = addLabel(panelNoiDung, gbc, row, "Chuyên môn *");
+        txtChuyenMon = new JTextField();
+        txtChuyenMon.setFont(new Font(FONT, Font.PLAIN, 13));
+        styleInput(txtChuyenMon);
+        gbc.gridx = 0; gbc.gridy = row++; gbc.gridwidth = 2;
+        panelNoiDung.add(txtChuyenMon, gbc); gbc.gridwidth = 1;
+
+        row = addLabel(panelNoiDung, gbc, row, "Số điện thoại *");
+        txtSoDienThoai = new JTextField();
+        txtSoDienThoai.setFont(new Font(FONT, Font.PLAIN, 13));
+        styleInput(txtSoDienThoai);
+        gbc.gridx = 0; gbc.gridy = row++; gbc.gridwidth = 2;
+        panelNoiDung.add(txtSoDienThoai, gbc); gbc.gridwidth = 1;
+
+        JPanel panelNut = xayDungPanelNut();
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 2;
+        gbc.insets = new Insets(12, 0, 0, 0);
+        panelNoiDung.add(panelNut, gbc);
+
+        panelNgoai.add(thanhGradient, BorderLayout.NORTH);
+        panelNgoai.add(panelNoiDung, BorderLayout.CENTER);
+        return panelNgoai;
     }
 
-    if(!gioiTinh.getText().trim().isEmpty()){
-        filters.add(RowFilter.regexFilter("(?i)" + gioiTinh.getText(), 2));
+    private int addLabel(JPanel panel, GridBagConstraints gbc, int row, String ten) {
+        JLabel lbl = new JLabel(ten);
+        lbl.setFont(new Font(FONT, Font.PLAIN, 12));
+        lbl.setForeground(MAU_CHU_PHU);
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 2;
+        gbc.insets = new Insets(8, 2, 1, 2);
+        panel.add(lbl, gbc);
+        gbc.insets = new Insets(4, 2, 4, 2); gbc.gridwidth = 1;
+        return row + 1;
     }
 
-    if(!namSinh.getText().trim().isEmpty()){
-        filters.add(RowFilter.regexFilter(namSinh.getText(), 3));
+    private void styleInput(JTextField tf) {
+        tf.setBorder(BorderFactory.createCompoundBorder(
+                BorderFactory.createLineBorder(MAU_VIEN, 1), new EmptyBorder(4, 8, 4, 8)));
+        tf.setPreferredSize(new Dimension(0, 32));
     }
 
-    if(!chuyenMon.getText().trim().isEmpty()){
-        filters.add(RowFilter.regexFilter("(?i)" + chuyenMon.getText(), 4));
+    private JPanel xayDungPanelNut() {
+        JPanel panel = new JPanel(new GridLayout(2, 2, 6, 6));
+        panel.setBackground(MAU_TRANG);
+        btnThemMoi = new ActionButton(); btnThemMoi.setText("＋  Thêm mới");
+        btnCapNhat = new ActionButton(); btnCapNhat.setText("✎  Cập nhật");
+        btnCapNhat.setColorTop(new Color(39, 174, 96)); btnCapNhat.setColorBottom(new Color(27, 124, 66));
+        btnXoa = new ActionButton(); btnXoa.setText("✖  Xóa");
+        btnXoa.setColorTop(new Color(231, 76, 60)); btnXoa.setColorBottom(new Color(192, 57, 43));
+        btnLamMoi = new ActionButton(); btnLamMoi.setText("⟳  Làm mới");
+        btnLamMoi.setColorTop(new Color(127, 140, 141)); btnLamMoi.setColorBottom(new Color(99, 110, 114));
+        btnThemMoi.addActionListener(e -> xuLyThemMoi());
+        btnCapNhat.addActionListener(e -> xuLyCapNhat());
+        btnXoa.addActionListener(e -> xuLyXoa());
+        btnLamMoi.addActionListener(e -> lamMoiToanBo());
+        panel.add(btnThemMoi); panel.add(btnCapNhat);
+        panel.add(btnXoa); panel.add(btnLamMoi);
+        return panel;
     }
 
-    if(!soDienThoai.getText().trim().isEmpty()){
-        filters.add(RowFilter.regexFilter(soDienThoai.getText(), 5));
+    private void taiDuLieu(String tuKhoa) {
+        lblTongSo.setText("Đang tải...");
+        new SwingWorker<ArrayList<HuongDanVienDTO>, Void>() {
+            @Override
+            protected ArrayList<HuongDanVienDTO> doInBackground() throws Exception {
+                return (tuKhoa == null || tuKhoa.isBlank())
+                        ? bus.getAllHDV() : bus.searchHuongDanVien(tuKhoa);
+            }
+            @Override
+            protected void done() {
+                try {
+                    ArrayList<HuongDanVienDTO> ds = get();
+                    modelBang.setRowCount(0);
+                    int stt = 1;
+                    for (HuongDanVienDTO hdv : ds) {
+                        modelBang.addRow(new Object[]{
+                            stt++, hdv.getMaHDV(), hdv.getTenHDV(),
+                            hdv.getGioiTinh(), hdv.getNamSinh(),
+                            hdv.getChuyenMon(), hdv.getSoDienThoai()
+                        });
+                    }
+                    lblTongSo.setText("Tổng: " + ds.size() + " bản ghi");
+                } catch (Exception ex) {
+                    hienThiLoi("Không thể tải dữ liệu:\n" + ex.getMessage());
+                    lblTongSo.setText("Lỗi tải dữ liệu");
+                }
+            }
+        }.execute();
     }
 
-    sorter.setRowFilter(RowFilter.andFilter(filters));
-    }//GEN-LAST:event_timkiemActionPerformed
-
-    private void lammoiActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_lammoiActionPerformed
-        maHDV.setText("");
-        tenHDV.setText("");
-        gioiTinh.setText("");
-        namSinh.setText("");
-        chuyenMon.setText("");
-        soDienThoai.setText("");
-    }//GEN-LAST:event_lammoiActionPerformed
-
-    private void themActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_themActionPerformed
-        DefaultTableModel model = (DefaultTableModel) tbHDV.getModel();
-        model.addRow(new Object[]{
-        maHDV1.getText(),
-        tenHDV1.getText(),
-        gioiTinh1.getText(),
-        namSinh1.getText(),
-        chuyenMon1.getText(),
-        soDienThoai.getText(),
-    });
-    }//GEN-LAST:event_themActionPerformed
-
-    private void suaActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_suaActionPerformed
-        int i = tbHDV.getSelectedRow();
-        if(i >= 0){
-        DefaultTableModel model = (DefaultTableModel) tbHDV.getModel();
-        model.setValueAt(maHDV1.getText(), i, 0);
-        model.setValueAt(tenHDV1.getText(), i, 1);
-        model.setValueAt(gioiTinh1.getText(), i, 2);
-        model.setValueAt(namSinh1.getText(), i, 3);
-        model.setValueAt(chuyenMon1.getText(), i, 4);
-        model.setValueAt(soDienThoai1.getText(), i, 5);
+    private void dienFormTuHang(int row) {
+        String maHDV = (String) modelBang.getValueAt(row, 1);
+        String tenHDV = (String) modelBang.getValueAt(row, 2);
+        String gioiTinh = (String) modelBang.getValueAt(row, 3);
+        Object namSinh = modelBang.getValueAt(row, 4);
+        String chuyenMon = (String) modelBang.getValueAt(row, 5);
+        String sdt = (String) modelBang.getValueAt(row, 6);
+        hdvDangChon = HuongDanVienDTO.builder()
+                .maHDV(maHDV).tenHDV(tenHDV).gioiTinh(gioiTinh)
+                .namSinh(namSinh instanceof Integer ? (Integer) namSinh : 0)
+                .chuyenMon(chuyenMon).soDienThoai(sdt).build();
+        txtMaHDV.setText(maHDV);
+        txtTenHDV.setText(tenHDV);
+        cboGioiTinh.setSelectedItem(gioiTinh != null ? gioiTinh : "Nam");
+        txtNamSinh.setText(namSinh != null ? namSinh.toString() : "");
+        txtChuyenMon.setText(chuyenMon != null ? chuyenMon : "");
+        txtSoDienThoai.setText(sdt != null ? sdt : "");
     }
-    }//GEN-LAST:event_suaActionPerformed
 
-    private void xoaActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_xoaActionPerformed
-        int i = tbHDV.getSelectedRow();
-        if(i >= 0){
-        DefaultTableModel model = (DefaultTableModel) tbHDV.getModel();
-        model.removeRow(i);
+    private void resetFormThemMoi() {
+        hdvDangChon = null;
+        try { txtMaHDV.setText(bus.sinhMaMoi()); } catch (Exception e) { txtMaHDV.setText("HDV---"); }
+        txtTenHDV.setText(""); cboGioiTinh.setSelectedIndex(0);
+        txtNamSinh.setText(""); txtChuyenMon.setText("");
+        txtSoDienThoai.setText("");
+        bangDuLieu.clearSelection();
+        txtTenHDV.requestFocusInWindow();
     }
-    }//GEN-LAST:event_xoaActionPerformed
 
+    private void xuLyThemMoi() {
+        HuongDanVienDTO hdv = docDuLieuForm();
+        if (hdv == null) return;
+        try {
+            bus.addHuongDanVien(hdv);
+            hienThiThongBao("Thêm hướng dẫn viên \"" + hdv.getTenHDV() + "\" thành công.");
+            taiDuLieu(null); resetFormThemMoi();
+        } catch (BusException ex) { hienThiLoi("Thêm thất bại:\n" + ex.getMessage()); }
+    }
 
-    // Variables declaration - do not modify//GEN-BEGIN:variables
-    private GUI.LoginForm.CustomTextField chuyenMon;
-    private GUI.LoginForm.CustomTextField chuyenMon1;
-    private GUI.LoginForm.CustomTextField gioiTinh;
-    private GUI.LoginForm.CustomTextField gioiTinh1;
-    private javax.swing.JLabel jLabel1;
-    private javax.swing.JLabel jLabel10;
-    private javax.swing.JLabel jLabel11;
-    private javax.swing.JLabel jLabel12;
-    private javax.swing.JLabel jLabel13;
-    private javax.swing.JLabel jLabel14;
-    private javax.swing.JLabel jLabel2;
-    private javax.swing.JLabel jLabel3;
-    private javax.swing.JLabel jLabel4;
-    private javax.swing.JLabel jLabel5;
-    private javax.swing.JLabel jLabel6;
-    private javax.swing.JLabel jLabel7;
-    private javax.swing.JLabel jLabel8;
-    private javax.swing.JLabel jLabel9;
-    private javax.swing.JPanel jPanel1;
-    private javax.swing.JPanel jPanel2;
-    private javax.swing.JPanel jPanel3;
-    private javax.swing.JPanel jPanel4;
-    private javax.swing.JScrollPane jScrollPane3;
-    private GUI.Menu.ActionButton lammoi;
-    private GUI.LoginForm.CustomTextField maHDV;
-    private GUI.LoginForm.CustomTextField maHDV1;
-    private GUI.LoginForm.CustomTextField namSinh;
-    private GUI.LoginForm.CustomTextField namSinh1;
-    private GUI.LoginForm.CustomTextField soDienThoai;
-    private GUI.LoginForm.CustomTextField soDienThoai1;
-    private GUI.Menu.ActionButton sua;
-    private javax.swing.JTable tbHDV;
-    private GUI.LoginForm.CustomTextField tenHDV;
-    private GUI.LoginForm.CustomTextField tenHDV1;
-    private GUI.Menu.ActionButton them;
-    private GUI.Menu.ActionButton timkiem;
-    private GUI.Menu.ActionButton xoa;
-    // End of variables declaration//GEN-END:variables
+    private void xuLyCapNhat() {
+        if (hdvDangChon == null) { hienThiLoi("Vui lòng chọn một hướng dẫn viên để cập nhật."); return; }
+        HuongDanVienDTO hdv = docDuLieuForm();
+        if (hdv == null) return;
+        try {
+            bus.updateHuongDanVien(hdv);
+            hienThiThongBao("Cập nhật hướng dẫn viên \"" + hdv.getTenHDV() + "\" thành công.");
+            taiDuLieu(txtTimKiem.getText());
+        } catch (BusException ex) { hienThiLoi("Cập nhật thất bại:\n" + ex.getMessage()); }
+    }
+
+    private void xuLyXoa() {
+        if (hdvDangChon == null) { hienThiLoi("Vui lòng chọn một hướng dẫn viên để xóa."); return; }
+        int xacNhan = JOptionPane.showConfirmDialog(this,
+                "Bạn có chắc muốn xóa hướng dẫn viên \"" + hdvDangChon.getTenHDV() + "\" không?",
+                "Xác nhận xóa", JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE);
+        if (xacNhan != JOptionPane.YES_OPTION) return;
+        try {
+            bus.deleteHuongDanVien(hdvDangChon.getMaHDV());
+            hienThiThongBao("Đã xóa hướng dẫn viên \"" + hdvDangChon.getTenHDV() + "\" thành công.");
+            taiDuLieu(null); resetFormThemMoi();
+        } catch (BusException ex) { hienThiLoi("Xóa thất bại:\n" + ex.getMessage()); }
+    }
+
+    private void lamMoiToanBo() {
+        txtTimKiem.setText(""); taiDuLieu(null); resetFormThemMoi();
+    }
+
+    private HuongDanVienDTO docDuLieuForm() {
+        String maHDV = txtMaHDV.getText().trim();
+        String tenHDV = txtTenHDV.getText().trim();
+        String gioiTinh = (String) cboGioiTinh.getSelectedItem();
+        String namSinhStr = txtNamSinh.getText().trim();
+        String chuyenMon = txtChuyenMon.getText().trim();
+        String sdt = txtSoDienThoai.getText().trim();
+        if (tenHDV.isEmpty()) { hienThiLoi("Tên hướng dẫn viên không được để trống."); txtTenHDV.requestFocusInWindow(); return null; }
+        int namSinh;
+        try { namSinh = Integer.parseInt(namSinhStr); }
+        catch (NumberFormatException e) { hienThiLoi("Năm sinh phải là số nguyên (VD: 1990)."); txtNamSinh.requestFocusInWindow(); return null; }
+        if (chuyenMon.isEmpty()) { hienThiLoi("Chuyên môn không được để trống."); txtChuyenMon.requestFocusInWindow(); return null; }
+        if (sdt.isEmpty()) { hienThiLoi("Số điện thoại không được để trống."); txtSoDienThoai.requestFocusInWindow(); return null; }
+        return HuongDanVienDTO.builder()
+                .maHDV(maHDV).tenHDV(tenHDV).gioiTinh(gioiTinh)
+                .namSinh(namSinh).chuyenMon(chuyenMon).soDienThoai(sdt).build();
+    }
+
+    private void hienThiLoi(String thongBao) {
+        JOptionPane.showMessageDialog(this, thongBao, "Lỗi", JOptionPane.ERROR_MESSAGE);
+    }
+
+    private void hienThiThongBao(String thongBao) {
+        JOptionPane.showMessageDialog(this, thongBao, "Thông báo", JOptionPane.INFORMATION_MESSAGE);
+    }
 }
